@@ -7,11 +7,11 @@ AUX mixxx-1.11.9999-docs.patch 438 SHA256 19377d095e34071010ddda59b03b86a63b82f2
 AUX mixxx-1.11.9999-no-bzr.patch 1468 SHA256 6075410573cd0911623dd0a160cdefe6a48c3f335eeef682d80eebf52b75446e SHA512 d5aa2071a836cad7c995f1e83af3ee06687a4444845583013df2023bc11f58a626c1f887fe49385b562d26d70a156383ba47d4dd6ae61b194790b1ac498e8f7c WHIRLPOOL ff247e659c62bbbe3f0989c78a284c9ea6815e162e185b6fa8844775521d268fbfbed59197b27d2949376f7db070b8aa9a4f4bf5ce9d674c8d763df9908cc0fe
 AUX mixxx-1.11.9999-system-libs.patch 8072 SHA256 996c6a170e06a5b4b0250f6fcefd80be8cb6d51325ee19c231360f1892567cb1 SHA512 d8d6ab9162b365288e224bfe2611c3322d539e35284c26ede0c829a29508a1047ad8e28c08bc769a0c72bfc70e69ebca71ac8e0217fb78c5904582153c1ae267 WHIRLPOOL 0fffac4355f882e01fefaaca19cdbf9cc048d1ef6892f2451c7e7163ad19fa17e41685980acb8cd62d4530010f3ec88db8962827d35fb9f9ec5ff564adaafa89
 AUX mixxx-9999-cflags.patch 565 SHA256 a0e19566dad57446c7991efb3bbb6201b57a7608cbf23dccfc90fd7f36f38a02 SHA512 31ab088e9c7f55f1cd0ee277aa43ee1ca0ac514dd78a280121e84e0c875a9ecf4200a94e55b6fe73e7b56f1a40123b7232937ebf7d22458fb5b29fd90cd0038e WHIRLPOOL c6ff82134c0e9f7714cb7e1e60d9314018da4c4f48db80e9e60e08390b1a5af5eaa53bbb64e774446876093fdeb17445b7328ee8735da55398cf3ac089edb0a5
-AUX mixxx-9999-docs.patch 438 SHA256 19377d095e34071010ddda59b03b86a63b82f2663dca32f8dc6771e6d217f1f7 SHA512 c2ebe6043bea9bc793e92d98237ea8369169bc874354f58a88388a59f0d98630e97e44aea169418824b740cd0108689d7b8d4e619b7ce5788c9c72f5ce844846 WHIRLPOOL 31dea2227c3353ade49d7683b32a0c0b9db54870551d30b9d33b69a01762d3dc9a6e452059ee690762632732968043d0c57139fefcd66461c7723f38d66677bf
+AUX mixxx-9999-docs.patch 445 SHA256 9250ab6b2368ad03b8c54d767fda1d23cd826340189cf8989a3156b76b375411 SHA512 cad756af2cfc90433b20d0a867aed9b85ee822691c5c8adc97de6943273823a769d8e6d4912a71f00bbead2cd96cff91cc12fb2fb8de547bf76dabd74372490e WHIRLPOOL 91b48e4577ff127065bbcae34d945613029850b43831209cc1b1f9c2d1da7fc3c02c9fa96dd958fe85f934749bcbace1b2c6c3c358306dc6d6ea91935337a327
 AUX mixxx-9999-system-libs.patch 7725 SHA256 710e0aa4090e75e371c30f100b9a47ae744e2710790d2cdbfb698de95c8e180c SHA512 64cce074424b645920733928d6643164548fce6a09ca4aa96bfd2e5e562057ef594136f7e2f60afdeca436f14284dff9e1e3c7b81a256367488ba9ae8335d94c WHIRLPOOL 9d8a279dc0120aef13f771ac67324b58686a826bdae53ec3ca010d81b353babfd569f64fc56cb795f3753a60bfa93a6f6d68a3a64b7e23171560d649620b11e7
 DIST mixxx-1.11.0-src.tar.gz 24473835 SHA256 00961b5d6c1e6d6686d76e55de474b943bbeff4e59b163dddd3d9940dc1b0331 SHA512 a42c2e3a648986e401f9812315942b5c68e0bc4f47ce867eb043d64f9d7836860e414b04b5e5da52b0541da5069d231774f30e965bcf3bd0db09f6bca74876c2 WHIRLPOOL 9ab4de6bfa5840500f04a4e7d523b6546e0ef08ade017f14b73425e205f039a6da11604f2b0e902085ff3062fff451385f984735029592d4b10ac3d4e0c985b1
 EBUILD mixxx-1.11.0.ebuild 2268 SHA256 3073dae0132a766076bef6ea221a524ebc0e3a31f2c1d60cab1fad902bb4b4b3 SHA512 441141d4c366cff455998cbd42daed61e745b91940b39dccc5f4a3cce268dcd16d1ae7b1e55033bf53f68a7c65aa486f9f91b571c5888d02d8d1b7f43934168d WHIRLPOOL 895a2e2288c6e46298c4bd31dff4ca1fb900b1c324906b27c0e1efbedc5499c0a727afc8bd8cd168f3af944c9e3e00e382271dfa9ee88111889a203d9c078658
 EBUILD mixxx-1.11.9999.ebuild 2263 SHA256 3d0226957b626e92f6ba2f9d6a7b2d764f6282f940ef77bd534b11fb609b1fc8 SHA512 b94e1a928cbb6f12abb19e0080bb098c58f4458010b866feb6358f745d72208524369e55d3ed8e06c24ef315426a85e9d14263faf52e54e14fdbb9846bb30ccf WHIRLPOOL 2117ce352078cd1e2ca9e8c7abd7d91e61d13b9a18ab3ec880b462c332e8a413b130bc1af150136a0beab41ccbb81bdc229c4bb29f14c673c8a3a24ffd3136c3
 EBUILD mixxx-9999.ebuild 2315 SHA256 bb5715e98a5d5f135d834414e655953485acb7d527ce300f151900e2a7c8e311 SHA512 13b4dd4371fabe3e7024d7e8c07d35b3058cb4ff280185d8b5397cd68de370e82b9434ac29d9d3ca8ff4da629ddfce10c5f7eedd806ab10679159fdc1d7a1fe1 WHIRLPOOL 5cd8dfa5079aa381e44fbd5e09dd9e7d4255e774bb59fe7d8ec682c7c0642091b3db45bca7b1242cfee59f63463353438720100434062b60a69c6d01b5cb0ac7
-MISC ChangeLog 7286 SHA256 7a4ae10cf8c3c0ae4c2adcf517ec6d220fcb1f586e3a42fffd9dc023f59f0df4 SHA512 ee1184949f5d33055d334a447c26924f9e4ddf357a25e6ed94879f8c13572829f1cefe3c8ddb48d58842883cc9f4251f9288ceb82c225d9e128159e0f5ca3793 WHIRLPOOL 4d51d417da99fd6deabb305ca07ef9f58a52e6d81958022b844e0687d92816709ac768beab75140d4fd2f5e0582ec7d85e0bea143f584c27f81320d81feea385
+MISC ChangeLog 7434 SHA256 5ed4808e6b62df2b6d1e93cf28f9e8bbbab9a2077a7a35a0545f1b07e8dbb5bd SHA512 bf66978e1981993d1045b0ce721b7206dcd9a5577e91bb90f6d53f92c73dce3a21238f3d8889d1db8fd98882802960f708651f2452e237af6500a6501fb003a4 WHIRLPOOL 208cedc769a93ea797640b88c62489cc8912fecfde4ade65c6a91989899e57326c24d4deff7e371d31a417a0666fcadce0fd921ce5724302230cae5e5a4f157a
 MISC metadata.xml 485 SHA256 2d28e5b3222a404cd0ae26b12d70640ed15c665204a43496862b77f0396f2038 SHA512 cf3578bae5e75f6b5db4ca71cd00a9389878d87d0983b0c5e0b2858336bd30186df13c58b03b9f1f2e698b651d360058ed0ff63771be6ba98128ae30b886d7f7 WHIRLPOOL 275c04e470f80968e15e0c3ef77cfa4f6fe89917b01ce1d94ea7bebdfd30ee54baae32678d79e7d28dde24bd0f4ad1f8756f185638e77421ab22ebca8e42c555
